clusters/prod-cluster/components/apps/fleetman-microservices/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleetman
  namespace: fleetman-microservices
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: fleetman.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 80
  tls:
    - hosts:
      - fleetman.example.com
      secretName: fleetman-tls
